objects/Handwrytten__Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Handwrytten__Recipient_Address_Line_2__c</fullName>
        <label>Recipient Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Recipient_Address__c</fullName>
        <label>Recipient Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Recipient_Business_Name__c</fullName>
        <label>Recipient Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Recipient_City__c</fullName>
        <label>Recipient City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Recipient_Country__c</fullName>
        <label>Recipient Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Recipient_Postal_Code__c</fullName>
        <label>Recipient Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Recipient_State_or_Province__c</fullName>
        <label>Recipient State or Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handwrytten__customObject__c</fullName>
        <label>customObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Handwrytten Mapping</label>
    <listViews>
        <fullName>Handwrytten__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mapping</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Handwrytten Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>